
Improvements:

 - Status view: update the file variable when a line is selected so
   %(file) works as expected.
 - Branch view: add %(branch) symbol providing access to the selected
   branch.
 - Branch view: add entry to browse all branches (uses git-log's --all
   flag).
 - Abbreviation of author names can now be configured and toggled.
 - Mark detached heads with [HEAD].

Bug fixes:

 - Status view: fix usage from sub directories, which was broken by the
   changes made to support blame view from sub directories.
 - Fix parsing of boolean show-date values.
 - Fix relative date.
 - Fix unbind to behave as if the keybinding was never defined.

tig-0.15
--------

Incompatibilities:

 - Setting the cursor color no longer automatically sets the text to
   bold. The old 'lazy' behavior was a bug.
 - Remove check for git-repo-config, which was officially deprecated in
   git version 1.5.4. The configure script no longer depends on git
   being installed.

Improvements:

 - Provide the manual as a man page named tigmanual(7).
 - Add ability to toggle between showing shorter dates (without time
   info) and relative dates. Use 'D' to toggle between date formats.
 - Show the active (instead of the default) keybindings in the help
   view. Furthermore, honor the keymap when suggesting actions in the
   help messages.
 - Add branch view for choosing which branch to display in the main
   view. Bound to 'H' by default.
 - Tree view: show entry to parent directory ('..') when running from
   subdirectory.
 - Tree view: sort entries by name, date or author. Toggling is bound to
   'i' by default, with 'I' controlling whether or not to sort in
   ascending order.
 - Make height of the lower view in a split view configurable by setting
   the 'split-view-height' variable to a number or a percentage.
   Defaults to 2/3 of the total view height.
 - Allow multiple text attributes for color commands:

	color cursor white blue underline bold

Bug fixes:
