@@ -434,7 +434,7 @@ Misc
 |v	|Show version.
 |o	|Open option menu
 |.	|Toggle line numbers on/off.
-|D	|Toggle date display on/off/relative.
+|D	|Toggle date display on/off/short/relative/local.
 |A	|Toggle author display on/off/abbreviated.
 |g	|Toggle revision graph visualization on/off.
 |F	|Toggle reference display on/off (tag and branch names).
